--- a/src/notes.Rmd
+++ b/src/notes.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Reproducible Science with R (Day 1)
 author: M.K. Lau
-output: tufte_html
+output: tufte_handout
 
 ---
 
@@ -369,9 +369,9 @@ https://www.rstudio.com/resources/cheatsheets/
 - *RStudio IDE Cheat Sheet*
 - *Base R*
 
-![General scientific project pipeline.](../docs/project_pipeline.png)
-
 ## Reproducibility Mantra (5 min)
+
+![General scientific project pipeline.](../docs/project_pipeline.png)
 
 **Max(reproducibility) = Documentation * Data * Software**
 
@@ -413,7 +413,7 @@ print("And more!")
 
 ```
 
-## More on Plotting (10 min)
+## More on Plotting (5 min)
 
 1. Plots are built in layers
 2. There is no *write* for plots, use *pdf*, *jpeg*, *png*, *tiff*,
@@ -698,11 +698,13 @@ iris <- data.frame(iris, Stem.Length)
 
 https://www.massaudubon.org/get-involved/citizen-science/firefly-watch
 
+Dr. Sara Lewis at Tufts University
+
 1. Import the data using 
 2. Explore them using *head*, *tail*, *str* and *summary*
-3. Make a plot of two of the variables in the dataset
+3. Make a plot of two of the variables and save the plot to *results*
 
-## Data testing (5 min)
+## Data testing and Conditionals (5 min)
 
 Conditional statements and operations allow us to check if an
 expectation is true or not. This is a crucial 
@@ -717,10 +719,11 @@ if (is.numeric(x[,1]) == FALSE){
 
 ```
 
-## Activity: Write your own test! (10 min)
+## Activity: Write your own test! (5 min)
 
-Check that the firefly data are imported correclty
+Write a test to (at least partly) check that the firefly data are imported correctly.
 
+What are your assumptions about the data?
 
 ## Further Study:
 
@@ -731,7 +734,7 @@ Check that the firefly data are imported correclty
 - *sp* and *raster* for spatial datasets
 - *purrr* "apply" functions = functions for repeating functions
 
-## Review and Q/A (10 min)
+## Review and Q/A (5 min)
 
 1. Project organization
 2. Data wrangling
