--- a/src/notes.Rmd
+++ b/src/notes.Rmd
@@ -539,26 +539,6 @@ organized. This determines how the information can be indexed.
   matrices but the columns can be different modes. 
 - *class* tells you the class of an object
 
-
-## Review and Q/A (5 min)
-
-1. Project organization
-2. Data wrangling
-
-
-# Day 3
-
-<!--           -->
-<!-- **Day 3** -->
-<!--           -->
-
-## Reproducibility Mantra (5 min)
-
-![General scientific project pipeline.](../docs/project_pipeline.png)
-
-**Max(reproducibility) = Documentation * Data * Software**
-
-
 ## Indexing, Sorting and Matching
 
 - *[]* the brackets are **R**'s way to refer to parts of data
@@ -729,12 +709,44 @@ iris <- data.frame(iris, Stem.Length)
 
 ```
 
-## 
+## Review and Q/A (5 min)
 
-![](../docs/yourmomentofzen.png)
+1. Project organization
+2. Data wrangling
 
 
-## Activity: Wrangling some real data (10 min)
+# Day 3
+
+<!--           -->
+<!-- **Day 3** -->
+<!--           -->
+
+## Reproducibility Mantra 
+
+![](../docs/workflow.png)
+
+**Max(reproducibility) = Documentation * Data * Software**
+
+## "Backing Up" Version Control (5 min)
+
+In this section, you'll learn how to use the version control system,
+known as git, from RStudio. We will cover the basic topics of how to:
+
+1. Initiate a project "repository"
+2. Create, "add" and "commit" changes
+3. View "diffs" and share a compressed project
+
+We will not cover how to use the online git repository known as
+*github*. Using *github* provides a central server through which
+projects can be shared among collaborators in real-time via a system
+that keeps users from stepping on each other's "digital toes". To
+setup a free, private repository through *github.com*, go to their
+educational program webpage: https://education.github.com
+
+
+## Activity: Working with real data (15 min)
+
+![](../docs/firefly.jpg)
 
 **Citizen Science - Firefly Watch**
 
@@ -742,11 +754,62 @@ Dr. Sara Lewis at Tufts University
 
 https://www.massaudubon.org/get-involved/citizen-science/firefly-watch
 
-1. Download the firefly data from https://github.com/MKLau/reprosci/blob/master/data/FFW_Data_2016.csv
-2. In the repro_example project, create a new script called "firefly.R"
-3. Import the data into the script
-4. Explore them using *head*, *tail*, *str* and *summary*
-5. Make a plot of two of the variables and save the plot to *results*
+*Setup a new project*
+
+1. Create a new project (*File -> New Project -> New Directory ->
+   firefly*, check "Create a git repository") 
+2. Setup the standard project directories (*data, doc, results, src*, *bin*)
+3. Download the firefly data from https://github.com/MKLau/reprosci/blob/master/data/FFW_Data_2016.csv
+4. Create a new script in *src* called "firefly.R"
+5. Now start writing your script with your header
+6. Import the data
+7. Explore them using *head*, *tail*
+8. *str* and *summary*
+9. Make a plot of two of the variables and save the plot to *results*
+
+**Make sure that your working directory is set correctly**
+
+## Get versioning with git (5 min)
+
+Git just tracks changes made to files. This is an extremely efficient
+way to keep a record of what has been done to a project. It was
+designed for writing software, but it will work with many file
+types. It works best with text files. 
+
+Here are the basic terms to know:
+
+- *repository* = a directory that has some hidden files that git
+  recognizes. Only files within the repository are tracked
+- *add* = telling git what files you would like to track (aka. stage)
+- *commit* = logs the changes to the tracked files
+
+## Commit best practices 
+
+1. Commits should represent a task that has progressed or completed
+2. Files with changes relevant to those tasks should be staged
+3. In general commit often and describe commits succinctly but
+informatively
+
+Examples:
+
+- Not so good = "Some changes"
+- Pretty darn good = "Added import plant data"
+
+## Activity: Commit your changes (5 min)
+
+1. Go to the git tab
+2. Select the files that you wish to add to the stage
+3. Click commit
+
+## Data wrangling review from Day 2 (10 min)
+
+We're going to cover some more info on how to work with data.
+
+## Activity: Make two vectors (each of length 5) and combine them into
+   a data frame (10 min)
+
+Play with your data. Try indexing, sorting and moving the data around
+into different objects.
 
 ## Data testing and Conditionals (5 min)
 
@@ -765,58 +828,17 @@ if (is.numeric(x[,1]) == FALSE){
 
 ## Activity: Write your own test! (5 min)
 
-Write a test to (at least partly) check that the firefly data are imported correctly.
+Think of an assumption you would have about the data and write a test
+to (at least partly) check that the firefly data are imported
+correctly.
 
-What are your assumptions about the data?
-
-## 
-
-![](../docs/firefly.jpg)
 
 <!-- 60 min -->
 
-## "Backing Up" Version Control (10 min)
+## 
 
-In this section, you'll learn how to use the version control system,
-known as git, from RStudio. We will cover the basic topics of how to:
+![](../docs/yourmomentofzen.png)
 
-1. Initiate a project "repository"
-2. Create, "add" and "commit" changes
-3. View "diffs" and share a compressed project
-
-We will not cover how to use the online git repository known as
-*github*. Using *github* provides a central server through which
-projects can be shared among collaborators in real-time via a system
-that keeps users from stepping on each other's "digital toes". To
-setup a free, private repository through *github.com*, go to their
-educational program webpage: https://education.github.com
-
-
-## Activity: Setup your ecological data project as a repository (10 min)
-
-1. Using RStudio's menu system, turn on git support
-2. Make some changes to your script
-3. Add them to the "stage"
-4. Review the changes
-5. Commit them
-
-## Commit best practices (5 min)
-
-1. Commits should represent a task that has progressed or completed
-2. Files with changes relevant to those tasks should be staged
-3. In general commit often and describe commits succinctly but
-informatively
-
-Examples:
-
-- "Some changes"
-- "Added data import of plant data"
-
-## Branching (10 min)
-
-- Separates commits
-
-## Activity: Commit! (5 min)
 
 ## Activity: Wanna go back in time! (10 min)
 
@@ -826,7 +848,25 @@ Rolling back versions
 2. Choose the time point (here's where commit messages are key!)
 3. Revert
 
-## Software Dependencies: R Packages and CRAN *et al.* (5 min)
+## Wrap-up on Reproducibility with **R** (5 min)
+
+1. Max(reproducible) = data * software * docs
+2. Project architecture for better access
+3. Document (comment, follow style, "Brevity is the soul of wit.")
+4. Share your results
+5. Planned obsolescence: Backup and version
+
+# Day (n + 3)
+
+1. *packrat*, *Rmarkdown* and github
+2. Possible: Advanced Topics Discussions (see *Advanced Topics*)
+
+- 1-hour sessions
+- Zoom + Slack
+- Museum or remote locations
+
+
+## Software Dependencies: R Packages and CRAN *et al.* 
 
 Functions and other information are grouped into packages and hosted
 on CRAN (Comprehensive **R** Archive Network). This modular structure
@@ -855,7 +895,7 @@ print(sessionInfo(), locale = FALSE)
 
 A good place for this information is in your README.
 
-## *packrat* (10 min)
+## *packrat* 
 
 Although there are other more sophisticated ways to implement
 dependency reproducibility, we'll go over *packrat*, which is
@@ -882,14 +922,6 @@ to specify the package ("packrat") that contains the function
 that you don't always have to load (i.e. *library*) the entire package
 when you just want to use one or a few functions.
 
-## Wrap-up on Reproducibility with **R** (5 min)
-
-1. Max(reproducible) = data * software * docs
-2. Project architecture for better access
-3. Document (comment, follow style, "Brevity is the soul of wit.")
-4. Share your results
-5. Planned obsolescence: Backup and version
-
 ## R Markdown Notebooks
 
 Markdown is a language use for "typesetting", like the HTML that makes
@@ -906,13 +938,8 @@ Markdown notebooks.
 
 https://rmarkdown.rstudio.com/r_notebooks.html
 
-# Day (n + 3)
 
-## Possible: Advanced Topics Discussions (5 min)
-
-- 1-hour sessions
-- Zoom + Slack
-- Museum or remote locations
+# Advanced Topics
 
 ## Data Wrangling
 
@@ -943,7 +970,6 @@ https://rmarkdown.rstudio.com/r_notebooks.html
 - Virtual Machines
 - Docker
 
-# Survey (5-10 min)
 
 
 
